# comfybar

./: CMakeLists.txt  README.md
inc/: comfybar.h
inc/comfybar/: area.h  bar-exceptions.h  bar.h  config.h
res/: config.conf
src/: main.cc
src/comfybar/: area.cc  bar-exceptions.cc  bar.cc  config.cc
